; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_cq.c_hns_roce_ib_free_cq_buf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_cq.c_hns_roce_ib_free_cq_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hns_roce_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.hns_roce_cq_buf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hns_roce_dev*, %struct.hns_roce_cq_buf*, i32)* @hns_roce_ib_free_cq_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns_roce_ib_free_cq_buf(%struct.hns_roce_dev* %0, %struct.hns_roce_cq_buf* %1, i32 %2) #0 {
  %4 = alloca %struct.hns_roce_dev*, align 8
  %5 = alloca %struct.hns_roce_cq_buf*, align 8
  %6 = alloca i32, align 4
  store %struct.hns_roce_dev* %0, %struct.hns_roce_dev** %4, align 8
  store %struct.hns_roce_cq_buf* %1, %struct.hns_roce_cq_buf** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.hns_roce_dev*, %struct.hns_roce_dev** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = add nsw i32 %8, 1
  %10 = load %struct.hns_roce_dev*, %struct.hns_roce_dev** %4, align 8
  %11 = getelementptr inbounds %struct.hns_roce_dev, %struct.hns_roce_dev* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = mul nsw i32 %9, %13
  %15 = load %struct.hns_roce_cq_buf*, %struct.hns_roce_cq_buf** %5, align 8
  %16 = getelementptr inbounds %struct.hns_roce_cq_buf, %struct.hns_roce_cq_buf* %15, i32 0, i32 0
  %17 = call i32 @hns_roce_buf_free(%struct.hns_roce_dev* %7, i32 %14, i32* %16)
  ret void
}

declare dso_local i32 @hns_roce_buf_free(%struct.hns_roce_dev*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
